--- a/src/components/ContactsForm/ContactsForm.module.css
+++ b/src/components/ContactsForm/ContactsForm.module.css
@@ -1,4 +1,4 @@
-.Form {
+.form {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -11,7 +11,7 @@
   background-color: mediumorchid;
 }
 
-.FormButton {
+.formButton {
   min-width: 50px;
 
   padding: 10px;
