--- a/src/components/Navigation/AuthNavigation/AuthNAvigation.module.css
+++ b/src/components/Navigation/AuthNavigation/AuthNAvigation.module.css
@@ -3,11 +3,13 @@
 
   justify-content: center;
 
-  min-width: 100px;
+  min-width: 150px;
+
+  margin-left: auto;
 }
 
 .authNavLink:not(:last-child) {
-  margin-right: 10px;
+  margin-right: 15px;
 }
 
 .authNavActiveLink {
