--- a/src/components/Navigation/MainNavigation/MainNavigation.module.css
+++ b/src/components/Navigation/MainNavigation/MainNavigation.module.css
@@ -1,14 +1,16 @@
 .navigation {
-  min-width: 100px;
-  margin: 0 auto;
+  min-width: 150px;
 }
 
 .mainNavList {
   display: inline-flex;
+  padding: 0;
+
+  margin-left: 15px;
 }
 
 .navigationItem:not(:last-child) {
-  margin-right: 10px;
+  margin-right: 15px;
 }
 
 .navigationActiveItem {
