--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -1,5 +1,18 @@
 .userMenuBox {
+  display: flex;
+  align-items: center;
+
   min-width: 150px;
 
   margin-left: auto;
+}
+
+.avatar {
+  width: 32px;
+  height: 32px;
+}
+
+.userinfo {
+  margin-right: 15px;
+  margin-left: 15px;
 }
